--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -134,6 +134,7 @@ body {
 
 .products {
   margin-top: 96px;
+  margin-bottom: 96px;
 
   // когда products_button и products_cards будут готовы включить ↓
   display: flex;
@@ -297,7 +298,7 @@ body {
 
     &_product_description {
       margin-top: -64px;
-      
+
       &_outer_frame {
         padding-top: 65px;
         padding-bottom: 65px;
@@ -307,6 +308,7 @@ body {
         align-items: center;
         margin-top: 12px;
         width: 1140px;
+        background-color: #fff;
       }
 
       &_name {
@@ -385,7 +387,6 @@ body {
         align-items: center;
       }
     }
-
   }
 
   &_additional_cards {
@@ -395,11 +396,14 @@ body {
 }
 
 .footer {
-  
+  background-image: url("./img/footer_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
   &_head {
     display: flex;
-    gap: 327px;
-    justify-content: center;
+    // gap: 327px;
+    justify-content: space-around;
     align-items: center;
     padding-top: 97px;
     padding-bottom: 126px;
@@ -416,7 +420,89 @@ body {
       &_text {
         width: 360px;
         text-align: center;
+        color: rgb(34, 34, 36);
+        font-style: italic;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24px;
       }
+    }
+
+    &_right {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+
+      &_text {
+        color: rgb(34, 34, 36);
+        font-size: 18px;
+        font-weight: 400;
+        width: 440px;
+        text-align: center;
+      }
+
+      &_header {
+        font-size: 24px;
+        font-weight: 700;
+      }
+
+      &_input {
+        display: flex;
+        // height: 49px;
+        // width: 356px;
+
+        &_email {
+          background-color: #e1e1e1;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 17px;
+          border: none;
+          border-radius: 25px 0 0 25px;
+          padding: 17px 22px;
+        }
+
+        &_button {
+          background-color: #f16d7f;
+          color: #ffffff;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 17px;
+          border: none;
+          border-radius: 0 25px 25px 0;
+          padding: 17px 22px;
+        }
+
+        &_button:hover {
+          color: #eaeaea;
+          cursor: pointer;
+        }
+
+        &_button:active {
+          transform: matrix(1.1, 0, 0, 1, 6, 0);
+        }
+      }
+    }
+  }
+
+  &_down {
+    background-color: #222;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
+    &_left {
+      color: #fbfbfb;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19px;
+    }
+
+    &_icons {
+      display: flex;
+      gap: 7px;
     }
   }
 }
