Добавил страницу Каталог. Определил корректную работу ссылок. доделал Подвал сайта

--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -329,28 +329,55 @@ body {
   margin-bottom: 129px;
 }
 
-.footer {
-  background-image: url("./img/footer_background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 .footer_head {
+  padding-top: 104px;
+  padding-bottom: 104px;
+  background-color: #222224;
+  display: flex;
+  gap: 30px;
+}
+.footer_head_card {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+.footer_head_card_head {
+  color: #fbfbfb;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.footer_head_card_text {
+  width: 360px;
+  text-align: center;
+  color: rgb(251, 251, 251);
+  font-size: 13.97px;
+  font-weight: 300;
+  line-height: 17px;
+}
+.footer_title {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding-top: 97px;
   padding-bottom: 126px;
 }
-.footer_head_left {
+.footer_title_background {
+  background-image: url("./img/footer_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.footer_title_left {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
 }
-.footer_head_left_pic {
+.footer_title_left_pic {
   width: 96px;
 }
-.footer_head_left_text {
+.footer_title_left_text {
   width: 360px;
   text-align: center;
   color: rgb(34, 34, 36);
@@ -359,27 +386,27 @@ body {
   font-weight: 400;
   line-height: 24px;
 }
-.footer_head_right {
+.footer_title_right {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
 }
-.footer_head_right_text {
+.footer_title_right_text {
   color: rgb(34, 34, 36);
   font-size: 18px;
   font-weight: 400;
   width: 440px;
   text-align: center;
 }
-.footer_head_right_header {
+.footer_title_right_header {
   font-size: 24px;
   font-weight: 700;
 }
-.footer_head_right_input {
+.footer_title_right_input {
   display: flex;
 }
-.footer_head_right_input_email {
+.footer_title_right_input_email {
   background-color: #e1e1e1;
   font-size: 14px;
   font-weight: 400;
@@ -388,7 +415,7 @@ body {
   border-radius: 25px 0 0 25px;
   padding: 17px 22px;
 }
-.footer_head_right_input_button {
+.footer_title_right_input_button {
   background-color: #f16d7f;
   color: #ffffff;
   font-size: 14px;
@@ -398,11 +425,11 @@ body {
   border-radius: 0 25px 25px 0;
   padding: 17px 22px;
 }
-.footer_head_right_input_button:hover {
+.footer_title_right_input_button:hover {
   color: #eaeaea;
   cursor: pointer;
 }
-.footer_head_right_input_button:active {
+.footer_title_right_input_button:active {
   transform: matrix(1.1, 0, 0, 1, 6, 0);
 }
 .footer_down {
