--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -396,17 +396,50 @@ body {
 }
 
 .footer {
-  background-image: url("./img/footer_background.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-
   &_head {
+    padding-top: 104px;
+    padding-bottom: 104px;
+    background-color:  #222224;
+    display: flex;
+    gap: 30px;
+
+    &_card {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      align-items: center;
+
+      &_head {
+        color: #fbfbfb;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 24px;
+      }
+
+      &_text {
+        width: 360px;
+        text-align: center;
+        color: rgb(251, 251, 251);
+        font-size: 13.97px;
+        font-weight: 300;
+        line-height: 17px;
+      }
+    }
+  }
+
+  &_title {
     display: flex;
     // gap: 327px;
     justify-content: space-around;
     align-items: center;
     padding-top: 97px;
     padding-bottom: 126px;
+
+    &_background {
+      background-image: url("./img/footer_background.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
     &_left {
       display: flex;
