--- a/02_HTML_CSS/02_seminar/style.scss
+++ b/02_HTML_CSS/02_seminar/style.scss
@@ -8,70 +8,92 @@ html, body {
     overflow: hidden;
 }
 
-/* details[open] summary::before {
-  content: "\2193";
-}
+.task_1 {
 
-summary {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  details[open] summary::before {
+    content: "\2193";
+  }
 
-details[close] .close {
+  summary {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  details[close] .close {
+      display: none;
+  }
+
+  details[open] .open {
+    display: block;
+  }
+
+  summary::-webkit-details-marker {
     display: none;
-}
+  }
 
-details[open] .open {
-  display: block;
-}
-
-summary::-webkit-details-marker {
-  display: none;
-}
-
-summary::before {
-  content: "\2192";
-  padding-right: 5px;
-  margin-left: 10px;
-} */
-
-/* .sort_menu {
-  display: flex;
-  gap: 30px;
-  margin-bottom: 50px;
-}
-
-summary {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-
-  &::after {
-    content: url("./image/Vector_1.svg");
+  summary::before {
+    content: "\2192";
+    padding-right: 5px;
+    margin-left: 10px;
   }
 }
 
-.lable_check_box {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  margin-top: 10px;
-  position: absolute;
-  
-  &-input {
-      text-transform: uppercase;
+.task_2 {
+  margin-top: 30px;
+
+  .sort_menu {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+
+  summary {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    &::after {
+      content: url("./image/Vector_1.svg");
     }
+  }
 
-} */
-
-input {
+  .lable_check_box {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 10px;
     position: absolute;
-    left: 9999999;
-    visibility: hidden;
+    
+    &-input {
+        text-transform: uppercase;
+      }
+
+  }
 }
 
-.box {
-    min-height: ;
-}
+.task_3 {
+  margin-top: 30px;
+  
+  input {
+      position: absolute;
+      left: -9999999px;
+      // visibility: hidden;
+  }
 
+  .box {
+    position: relative;
+    min-height: 100vh;
+  }
+
+  .content {
+    position: absolute;
+    right: 0;
+    transition: right 1s;
+
+  }
+  input:checked ~ .content {
+    right: -250px;
+  }
+
+}
