--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -134,7 +134,7 @@ body {
 }
 
 .products {
-  margin-top: 96px;
+  // margin-top: 64px;
   margin-bottom: 96px;
 
   // когда products_button и products_cards будут готовы включить ↓
@@ -394,8 +394,104 @@ body {
   }
 
   &_additional_cards {
-    margin-top: 129px;
+    margin-top: 729px;
     margin-bottom: 129px;
+  }
+}
+
+.filter {
+  // position: relative;
+  height: 132px;
+  padding-top: 39px;
+  // box-sizing: border-box;
+  display: flex;
+  gap: 30px;
+
+  &_details {
+    padding-top: 13px;
+    // padding: 13px 16px 16px;
+    width: 360px;
+    position: relative;
+    // top: 39px;
+    z-index: 10;
+    text-transform: uppercase;
+    box-sizing: border-box;
+
+    &_groups {
+      margin-top: 16px;
+      display: flex;
+      flex-direction: column;
+      background: #fff;
+      gap: 18px;
+      padding: 0 16px 16px;
+    }
+
+    &_group {
+      &[open] .filter_details_group_summary {
+        color: $colorSiteMainElement;
+      }
+
+      &_summary {
+        border-left: 5px solid $colorSiteMainElement;
+        border-bottom: 1px solid #ebebeb;
+        padding: 8px 11px 11px;
+        color: #6f6e6e;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 17px;
+        list-style: none;
+
+      }
+
+      &_links {
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+        padding: 24px 17px 6px;
+      }
+
+      &_link {
+        color: #6f6e6e;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 17px;
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  &_details[open] {
+    box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+    background: #fff;
+
+    .filter_summary_heading {
+      color: $colorSiteMainElement;
+    }
+
+    path {
+      fill: $colorSiteMainElement;
+    }
+  }
+
+  &_summary {
+    text-transform: uppercase;
+    display: flex;
+    gap: 11px;
+    align-items: center;
+    padding-left: 16px;
+
+
+    &_heading {
+      color: #000;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 17px;
+    }
+  }
+
+  &_sort {
+    // position: absolute;
+    top: 51px;
   }
 }
 
