--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -357,7 +357,7 @@ body {
 }
 
 .filter {
-  height: 132px;
+  height: 64px;
   padding-top: 39px;
   display: flex;
   gap: 30px;
@@ -428,7 +428,49 @@ body {
   line-height: 17px;
 }
 .filter_sort {
-  top: 51px;
+  padding-top: 12px;
+  display: flex;
+  gap: 18px;
+}
+.filter_sort_group {
+  position: relative;
+}
+.filter_sort_group[open] .filter_sort_group_heading > svg {
+  transform: rotate(180deg);
+}
+.filter_sort_group_heading {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  list-style: none;
+}
+.filter_sort_group_heading_text {
+  color: #6f6e6e;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+}
+.filter_sort_group_checkbox {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+  background: #fff;
+  padding: 7px 30px 11px 10px;
+  margin-top: 5px;
+  z-index: 10;
+  position: absolute;
+  left: -9px;
+}
+.filter_sort_group_checkbox_label {
+  display: flex;
+  color: #6f6e6e;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+}
+.filter_sort_group_checkbox_input {
+  margin-right: 9px;
 }
 
 .footer_head {
