--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -9,6 +9,11 @@
 
 body {
   font-family: "Lato", sans-serif;
+  height: 100%;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 .center {
@@ -17,6 +22,8 @@ body {
 }
 
 .header {
+  position: relative;
+
   &_logo_group {
     background: #222;
     display: flex;
@@ -36,6 +43,31 @@ body {
     display: flex;
     gap: 33px;
     align-items: center;
+
+    #burger {
+      position: absolute;
+      left: -999999px;
+      visibility: hidden;
+      
+      &:checked ~ nav {
+        right: -232px;
+      }
+    }
+
+    .burger_nav {
+      box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+      background: #fff;
+      width: 232px;
+      padding: 32px;
+      box-sizing: border-box;
+      position: absolute;
+      top: 78px;
+      right: 0px;
+      transition: right 0.3s;
+
+      /* burger_nav стили */
+    }
+
   }
 }
 
