--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .swiper {
   margin-left: auto;
   margin-right: auto;
@@ -75,13 +74,41 @@ html, body {
   box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
   background: #fff;
   width: 232px;
-  padding: 32px;
+  padding: 37px 34px 32px;
   box-sizing: border-box;
   position: absolute;
   top: 78px;
   right: 0px;
   transition: right 0.3s;
-  /* burger_nav стили */
+  z-index: 1;
+}
+.header_nav .burger_nav .nav_header {
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  text-transform: uppercase;
+}
+.header_nav .burger_nav .nav_group_name {
+  list-style: none;
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  padding: 20px 0px 0px;
+  text-transform: uppercase;
+}
+.header_nav .burger_nav .nav_group_elements {
+  display: flex;
+  flex-direction: column;
+  padding-left: 21px;
+}
+.header_nav .burger_nav .nav_group_link {
+  color: #6f6e6e;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  margin-top: 11px;
 }
 
 .title {
