Верстаю страницу ДЗ

--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -33,13 +33,20 @@ body {
   height: 100%;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
 .center {
   padding-left: calc(50% - 570px);
   padding-right: calc(50% - 570px);
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .header {
@@ -328,15 +335,15 @@ html, body {
   padding-bottom: 60px;
   background-color: #f8f3f4;
   /*     &_right {
-        color: $colorSiteMainElement;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 17px;
+    color: $colorSiteMainElement;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
 
-        span {
-          font-weight: 900;
-        }
-      } */
+    span {
+      font-weight: 900;
+    }
+  } */
 }
 .page_product_top_left a {
   color: #F16D7F;
@@ -439,15 +446,63 @@ html, body {
 }
 
 .lists-cart {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 128px;
+  display: flex;
+  justify-content: space-between;
+}
+.lists-cart__left {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.address {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.address__header {
+  text-transform: uppercase;
+  color: #222;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+}
+.address__input {
+  padding: 13px 17px 16px;
+  color: #222;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 16px;
+  text-align: left;
+  border: 1px solid rgb(164, 164, 164);
+}
+.address__input::-moz-placeholder {
+  color: #b1b1b1;
+}
+.address__input::placeholder {
+  color: #b1b1b1;
+}
+.address__button {
+  border: 1px solid rgb(164, 164, 164);
+  padding: 10px 14px;
+  max-width: 107px;
+  color: rgb(74, 74, 74);
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 13px;
+}
+.address__button:hover {
+  background: #F16D7F;
+  color: #fff;
 }
 
 .cart {
   width: 652px;
   display: flex;
   gap: 31px;
-  align-items: center;
   box-shadow: 17px 19px 24px 0px rgba(0, 0, 0, 0.13);
 }
 .cart .cart-group {
@@ -458,16 +513,66 @@ html, body {
   padding-top: 22px;
   padding-bottom: 62px;
 }
+.cart .cart-group__header {
+  display: flex;
+  gap: 100px;
+  padding-right: 22px;
+}
+.cart .cart-group__header svg {
+  cursor: pointer;
+}
 .cart .cart-group__content {
   display: flex;
   flex-direction: column;
   gap: 6px;
+}
+.cart .cart-group .quantity {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+.cart .cart-group .quantity__number {
+  padding: 1px 16px;
+  max-width: 22px;
+  border: 1px solid #eaeaea;
+  color: rgb(101, 101, 101);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
 }
 .cart__name {
   color: #222;
   font-size: 24px;
   font-weight: 400;
   line-height: 29px;
+}
+.cart__data {
+  color: #575757;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 8px;
+}
+.cart__price_numder {
+  color: #ef5b70;
+}
+.cart__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cart__button {
+  padding: 17px 40px;
+  border: 1px solid #a4a4a4;
+}
+.cart__button:hover {
+  cursor: pointer;
+  background: #F16D7F;
+  color: #fff;
+  border: none;
 }
 
 .filter {
