--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -456,6 +456,11 @@ input[type=number]::-webkit-outer-spin-button {
   flex-direction: column;
   gap: 40px;
 }
+.lists-cart__right {
+  display: flex;
+  flex-direction: column;
+  gap: 58px;
+}
 
 .address {
   width: 360px;
@@ -493,10 +498,56 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 11px;
   font-weight: 300;
   line-height: 13px;
+  background-color: #fff;
 }
 .address__button:hover {
   background: #F16D7F;
   color: #fff;
+  cursor: pointer;
+}
+
+.checkout {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 40px 44px;
+  background: rgb(245, 243, 243);
+}
+.checkout__sub {
+  color: #4a4a4a;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13px;
+  margin-right: -9px;
+}
+.checkout__grand {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  color: #222;
+  margin-top: 12px;
+  margin-right: -6px;
+}
+.checkout__grand_span {
+  font-weight: 700;
+  color: #F16D7F;
+}
+.checkout__hr {
+  border: 1px solid #E2E2E2;
+  margin-top: 20px;
+  width: 100%;
+}
+.checkout__button {
+  padding: 15px 42px;
+  background: rgb(241, 109, 127);
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  border: none;
+  cursor: pointer;
+  margin-top: 17px;
 }
 
 .cart {
