--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -514,6 +514,12 @@ input[type="number"]::-webkit-outer-spin-button {
     flex-direction: column;
     gap: 40px;
   }
+
+  &__right {
+    display: flex;
+    flex-direction: column;
+    gap: 58px;
+  }
 }
 
 .address {
@@ -552,14 +558,66 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 11px;
     font-weight: 300;
     line-height: 13px;
+    background-color: #fff;
 
     &:hover {
       background: $colorSiteMainElement;
       color: #fff;
+      cursor: pointer;
     }
   }
 
 }
+
+.checkout {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 40px 44px;
+  background: rgb(245, 243, 243);
+
+  &__sub {
+    color: #4a4a4a;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+    margin-right: -9px;
+  }
+  
+  &__grand {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19px;
+    color: #222;
+    margin-top: 12px;
+    margin-right: -6px;
+
+    &_span {
+      font-weight: 700;
+      color: $colorSiteMainElement;
+    }
+  }
+  
+  &__hr {
+    border: 1px solid #E2E2E2;
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  &__button {
+    padding: 15px 42px;
+    background: rgb(241, 109, 127);
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19px;
+    border: none;
+    cursor: pointer;
+    margin-top: 17px;
+  }
+}
+
 .cart {
   width: 652px;
   display: flex;
