--- a/02_HTML_CSS/01_DZ/_swiper.scss
+++ b/02_HTML_CSS/01_DZ/_swiper.scss
@@ -20,4 +20,21 @@
     height: 100%;
     object-fit: cover;
   }
+
+  &-pagination-bullet {
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    color: #000;
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.2);
+
+    &-active {
+      color: #fff;
+      background: #007aff;
+    }
+  }
 }
+
