--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -21,6 +21,20 @@
   -o-object-fit: cover;
      object-fit: cover;
 }
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #007aff;
+}
 
 * {
   margin: 0;
@@ -325,6 +339,25 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
+}
+
+.swiper-page {
+  border: 1px solid rgb(235, 235, 235);
+  padding: 12px 16px;
+  display: flex;
+  gap: 18px;
+}
+.swiper-page__navigate ~ path {
+  fill: #000;
+}
+.swiper-page__number {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  color: #C4C4C4;
+}
+.swiper-page__number_active {
+  color: #EF5B70;
 }
 
 .page_product_top {
