--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -365,6 +365,28 @@ input[type="number"]::-webkit-outer-spin-button {
   }
 }
 
+.swiper-page {
+  border: 1px solid rgb(235, 235, 235);
+  padding: 12px 16px;
+  display: flex;
+  gap: 18px;
+
+  &__navigate ~ path{
+    fill: #000;
+  }
+
+  &__number {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19px;
+    color: #C4C4C4;
+
+    &_active {
+      color: #EF5B70;
+    }
+  }
+}
+
 .page_product {
   &_top {
     display: flex;
