--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -383,6 +383,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 24px;
   font-weight: 400;
   line-height: 29px;
+  text-transform: uppercase;
 }
 .page_product_title {
   position: relative;
@@ -774,6 +775,50 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .filter_sort_group_checkbox_input {
   margin-right: 9px;
+}
+
+.registration {
+  padding-top: 64px;
+  padding-bottom: 96px;
+}
+.registration__form {
+  display: flex;
+  flex-direction: column;
+  max-width: 359px;
+}
+.registration__label {
+  color: #222;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  margin-bottom: 20px;
+}
+.registration__input {
+  color: #b1b1b1;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 16px;
+  border: 1px solid #a4a4a4;
+  padding: 14px 17px;
+  outline: none;
+  margin-bottom: 20px;
+}
+.registration__gender {
+  display: flex;
+  gap: 10px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+.registration__gender .gender__radio {
+  box-sizing: border-box;
+  border: 1px solid rgb(164, 164, 164);
+}
+.registration__gender .gender__label {
+  color: #000;
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 13px;
+  margin-right: 10px;
 }
 
 .footer_head {
