--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -401,6 +401,7 @@ input[type="number"]::-webkit-outer-spin-button {
       font-size: 24px;
       font-weight: 400;
       line-height: 29px;
+      text-transform: uppercase;
     }
 
     /*     &_right {
@@ -864,6 +865,56 @@ input[type="number"]::-webkit-outer-spin-button {
           margin-right: 9px;
         }
       }
+    }
+  }
+}
+
+.registration {
+  padding-top: 64px;
+  padding-bottom: 96px;
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    max-width: 359px;
+  }
+
+  &__label {
+    color: #222;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 19px;
+    margin-bottom: 20px;
+  }
+  
+  &__input {
+    color: #b1b1b1;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 16px;
+    border: 1px solid #a4a4a4;
+    padding: 14px 17px;
+    outline: none;
+    margin-bottom: 20px;
+  }
+
+  &__gender {
+    display: flex;
+    gap: 10px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+
+    .gender__radio {
+      box-sizing: border-box;
+      border: 1px solid rgb(164, 164, 164);
+    }
+
+    .gender__label {
+      color: #000;
+      font-size: 11px;
+      font-weight: 300;
+      line-height: 13px;
+      margin-right: 10px;
     }
   }
 }
