--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -354,10 +354,10 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 16px;
   font-weight: 300;
   line-height: 19px;
-  color: #C4C4C4;
+  color: #c4c4c4;
 }
 .swiper-page__number_active {
-  color: #EF5B70;
+  color: #ef5b70;
 }
 
 .page_product_top {
@@ -517,6 +517,7 @@ input[type=number]::-webkit-outer-spin-button {
   line-height: 16px;
   text-align: left;
   border: 1px solid rgb(164, 164, 164);
+  outline: none;
 }
 .address__input::-moz-placeholder {
   color: #b1b1b1;
@@ -568,7 +569,7 @@ input[type=number]::-webkit-outer-spin-button {
   color: #F16D7F;
 }
 .checkout__hr {
-  border: 1px solid #E2E2E2;
+  border: 1px solid #e2e2e2;
   margin-top: 20px;
   width: 100%;
 }
@@ -780,8 +781,15 @@ input[type=number]::-webkit-outer-spin-button {
 .registration {
   padding-top: 64px;
   padding-bottom: 96px;
+  display: flex;
+  gap: 128px;
 }
-.registration__form {
+.registration__right {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+.registration__form_container {
   display: flex;
   flex-direction: column;
   max-width: 359px;
@@ -794,7 +802,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 20px;
 }
 .registration__input {
-  color: #b1b1b1;
+  color: #222;
   font-size: 13px;
   font-weight: 300;
   line-height: 16px;
@@ -806,7 +814,7 @@ input[type=number]::-webkit-outer-spin-button {
 .registration__gender {
   display: flex;
   gap: 10px;
-  margin-top: 32px;
+  margin-top: 12px;
   margin-bottom: 32px;
 }
 .registration__gender .gender__radio {
@@ -819,6 +827,69 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: 300;
   line-height: 13px;
   margin-right: 10px;
+}
+.registration__explanation {
+  color: #b1b1b1;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 16px;
+  margin-top: -5px;
+  margin-bottom: 40px;
+}
+.registration__button {
+  padding: 16px 29px;
+  text-transform: uppercase;
+  border: 1px solid #a4a4a4;
+  background-color: #fff;
+  color: #000;
+  box-sizing: border-box;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.registration__button_arrow path {
+  fill: #000;
+}
+.registration__button:hover {
+  background: #F16D7F;
+  border: 1px solid #F16D7F;
+  color: #fff;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.registration__button:hover .registration__button_arrow path {
+  fill: #fff;
+}
+.registration__header {
+  color: #000;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 29px;
+  text-transform: uppercase;
+}
+.registration__text {
+  color: #000;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 29px;
+  max-width: 652px;
+}
+.registration__ul {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.registration__perks {
+  color: #000;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 29px;
+  list-style: none;
+}
+.registration__perks::before {
+  content: url("./img/icon/tick.svg");
+  margin-right: 22px;
 }
 
 .footer_head {
