--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -238,6 +238,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .products {
+  margin-top: 64px;
   margin-bottom: 96px;
   display: flex;
   flex-direction: column;
